crates/ffs-harness/src/snapshots/ffs_harness__xfstests__tests__render_xfstests_baseline_markdown_not_run_snapshot.snap
---
source: crates/ffs-harness/src/xfstests.rs
expression: markdown
---
# xfstests baseline manifest `xfstests-baseline-test`

- subset version: `xfstests-curated-v1`
- environment manifest: `sha256:env` (fresh)
- checkpoint: `checkpoint:001`
- resume command: `XFSTESTS_MODE=run ./scripts/e2e/ffs_xfstests_e2e.sh`
- cleanup status: `artifacts_preserved`

## Dispositions

- interrupted: 1
- not_run: 1

## Cases

| Test | Status | Classification | Raw hash | Resume |
|---|---|---|---|---|
| generic/001 | not_run | product_actionable | `sha256:0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef` | `XFSTESTS_MODE=run ./scripts/e2e/ffs_xfstests_e2e.sh` |
| generic/002 | interrupted | product_actionable | `sha256:0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef` | `XFSTESTS_MODE=run ./scripts/e2e/ffs_xfstests_e2e.sh` |
